# optometrista

./: CHANGELOG.md  LICENSE  dani-optics-dot.cabal  optimetrista.cabal
lib/Optics/: Dot.hs
lib/Optics/Lens/: Dot.hs
test/: Main.hs
