cabal-version:      3.4
name:               dani-optics-dot
version:            0.1.0.0
synopsis:           Use @OverloadedRecordDot@ for nested optics access.
description:        Typeclasses and instances for the "optics" package,
                    that allow syntax like @the.foo.bar@ to express the 
                    composition of record field lenses @foo@ and @bar@.

                    For each record datatype, we can select the method for
                    obtaining lenses for its fields, be it through the "optics"
                    library built-in generic deriving, through the
                    @HasField@/@SetField@ typeclasses, or by writing
                    custom-defined lenses. The method can be specified
                    succinctly using @DerivingVia@.

                    Type-changing updates are supported.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Daniel Díaz
maintainer:         diaz_carrete@yahoo.com
build-type:         Simple
extra-doc-files:    
    CHANGELOG.md
    README.md
tested-with:  GHC == {9.8.4, 9.10.1, 9.12.2}

common warnings
    ghc-options: -Wall


common deps
    build-depends:    
        base >=4.19.0.0, 
        optics-core >= 0.4.1.1 && < 0.5

library
    import:           warnings, deps
    exposed-modules:  Optics.Dot
    hs-source-dirs:   lib
    default-language: GHC2021

test-suite optimetrista-test
    import:           warnings, deps
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        dani-optics-dot,
