cabal-version:      3.4
name:               dani-optics-dot
version:            0.1.1.0
synopsis:           Use OverloadedRecordDot for nested optics access.
description:        Extra typeclasses and instances for the "optics-core" package,
                    that allow syntax like @the.foo.bar@ to express the 
                    composition of record field lenses @foo@ and @bar@.

                    For each datatype, we can select through @DerivingVia@ how
                    to obtain optics for its fields or constructors.
                    
                    Usually the optics are obtained through the built-in support
                    "optics-core" has for generic deriving, but other methods
                    are supported as well.

                    Type-changing updates are supported.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Daniel Díaz
maintainer:         diaz_carrete@yahoo.com
category:           Data, Optics, Lenses
build-type:         Simple
extra-doc-files:    
    CHANGELOG.md
    README.md
tested-with:  GHC == {9.8.4, 9.10.1, 9.12.2}

source-repository head
   type:     git
   location: git@github.com:danidiaz/dani-optics-dot.git

common warnings
    ghc-options: -Wall


common deps
    build-depends:    
        base >=4.19.0.0 && <5, 
        optics-core >= 0.4.1.1 && < 0.5

library
    import:           warnings, deps
    exposed-modules:  Optics.Dot
    hs-source-dirs:   lib
    default-language: GHC2021

test-suite optimetrista-test
    import:           warnings, deps
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        dani-optics-dot,
